--- a/views/layout.html
+++ b/views/layout.html
@@ -9,6 +9,8 @@
     <link href="{{=URL('static','css/calendar.css')}}" rel="stylesheet" type="text/css"/>
     <link href="{{=URL('static','css/web2py.css')}}" rel="stylesheet" type="text/css"/>
     <link href="{{=URL('static','css/myapp.css')}}" rel="stylesheet" type="text/css"/>
+    <link href="{{=URL('static','css/bootstrap.css')}}" rel="stylesheet" type="text/css"/>
+    <link href="{{=URL('static','css/thumbnail_gallery.css')}}" rel="stylesheet" type="text/css"/>    
     <link rel="stylesheet" href="{{=URL('static', 'font-awesome-4.6.3/css/font-awesome.min.css')}}">
     {{include "web2py_ajax.html"}}
   </head>
