--- a/views/default/index.html
+++ b/views/default/index.html
@@ -17,7 +17,7 @@ var my_url = "{{=URL('api', 'my_method')}}";
 
             {{for recipe in recipes:}}
                 <div class="col-lg-3 col-md-4 col-xs-6">
-                    <h3>{{=recipe.name}}</h3>
+                    <h3><a href="{{=URL('default', 'recipe', args=[recipe.id])}}">{{=recipe.name}}</a></h3>
                     <p>{{=recipe.description}}</p>
                     <img class="img-fluid img-thumbnail" src="{{=URL('default', 'download', args=recipe.image)}}" alt="">
                 </div>
