--- a/views/default/index.html
+++ b/views/default/index.html
@@ -11,7 +11,7 @@ var my_url = "{{=URL('api', 'my_method')}}";
 
     <!-- Page Content -->
     <div class="container">
-        <h1 class="my-4 text-center text-lg-left">Thumbnail Gallery</h1>
+        <h1 class="my-4 text-center text-lg-left">Foodguys Finest Receipes</h1>
         <div class="row text-center text-lg-left">
 
 
