--- a/views/default/index.html
+++ b/views/default/index.html
@@ -35,5 +35,5 @@ var my_url = "{{=URL('api', 'my_method')}}";
     <script src="{{=URL('static', 'js/default_index.js')}}"></script>
     <!-- Bootstrap core JavaScript -->
     <script src="{{=URL('static', 'js/jquery.min.js')}}" ></script>
-    <script src="{{=URL('static', 'js/bootstrap.bundle.min.js')}}"></script>
+    <script src="{{=URL('static', 'js/bootstrap.bundle.js')}}"></script>
 </body>
