--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -6,3 +6,10 @@ a:not(.btn):not(.noeffect):after {background-color:#26a69a}
 .progress .indeterminate {background-color:#26a69a}
 .tags > span {background-color: #26a69a}
 .tags.dismissible > span.off:hover {background-color:#26a69a}
+
+.row {
+  margin: 30px 0;
+}
+.hidden {
+  display: none;
+}
