--- a/views/layout.html
+++ b/views/layout.html
@@ -29,22 +29,7 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarResponsive">
           {{=MENU(response.menu,_class='navbar-nav',ul_class='dropdown-menu',li_class='menu')}}
-        <ul class="navbar-nav ml-auto">
-            <li class="nav-item active">
-              <a class="nav-link" href="#">Home
-                <span class="sr-only">(current)</span>
-              </a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">About</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Services</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Contact</a>
-            </li>
-          </ul>
+          {{=auth.navbar(mode='dropdown')}}
         </div>
       </div>
     </nav>
