--- a/views/default/index_vue.html
+++ b/views/default/index_vue.html
@@ -37,24 +37,25 @@ var API = {
   </div>
 
       <div class="row">
-        <div class="col-sm-12">
-          <p>Filter by :
-          <label class="container">
-            <li><button type="button" class="btn btn-default btn-xs btn-tag">All</button> <input type="checkbox" checked="checked"></li>
+				<div class="col-sm-3 h-100">
+					<div class="list-group">
+    <button v-for="(tag, index) in tags" type="button" v-bind:class="{'active': is_active_tag(tag.name)}" class="list-group-item list-group-item-action" v-on:click="toggle_tag(index)">${tag.name}</button>
+					</div>
+				</div>
 
-            <li v-for="(tag, index) in tags"><button type="button" class="btn btn-default btn-xs btn-tag" v-on:click="toggle_tag(index)">${tag.name}, active: ${tag.active}</button></li>
 
-          </label>
 
-          </p>
+				<div class="col-sm-9 h-100">
+          <div class="row">
+            <div class="col-sm-6" v-for="recipe in display_recipes()">
+              <h2>${recipe.name}</h2>
+              <p>${recipe.description}<p/>
+              <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
+            </div>
+          </div>
         </div>
-      </div>
-      <div class="row">
-        <div class="col-md-4" v-for="recipe in filtered_recipes">
-          <h2>${recipe.name}</h2>
-          <p>${recipe.description}<p/>
-          <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
-        </div>
+
+
       </div>
 
       <hr>
