--- a/views/default/index_vue.html
+++ b/views/default/index_vue.html
@@ -4,8 +4,8 @@
 <script>
 
 var API = {
-    get_recipes: "{{=URL('api', 'get_recipes')}}",
-    get_recipe: "{{=URL('api', 'get_recipe')}}",
+    getRecipes: "{{=URL('api', 'get_recipes')}}",
+    getRecipe: "{{=URL('api', 'get_recipe')}}",
 };
 
 </script>
@@ -39,7 +39,7 @@ var API = {
       <div class="row">
 				<div class="col-sm-3 h-100">
 					<div class="list-group">
-    <button v-for="(tag, index) in tags" type="button" v-bind:class="{'active': is_active_tag(tag.name)}" class="list-group-item list-group-item-action" v-on:click="toggle_tag(index)">${tag.name}</button>
+    <button v-for="(tag, index) in tags" type="button" v-bind:class="{'active': isActiveTag(tag.name)}" class="list-group-item list-group-item-action" v-on:click="toggle_tag(index)">${tag.name}</button>
 					</div>
 				</div>
 
@@ -47,7 +47,7 @@ var API = {
 
 				<div class="col-sm-9 h-100">
           <div class="row">
-            <div class="col-sm-6" v-for="recipe in display_recipes()">
+            <div class="col-sm-6" v-for="recipe in displayRecipes()">
               <h2>${recipe.name}</h2>
               <p>${recipe.description}<p/>
               <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
