--- a/views/default/index_vue.html
+++ b/views/default/index_vue.html
@@ -25,40 +25,39 @@ var API = {
 <div class="container">
 
   <div class="row searchFilter" >
-    <div class="col-sm-12" >
-      <div class="input-group" >
-        <input id="table_filter" type="text" class="form-control" aria-label="Text input with segmented button dropdown" >
-        <div class="input-group-btn" >
 
-          <button id="searchBtn" type="button" class="btn btn-secondary btn-search" ><span class="glyphicon glyphicon-search" >&nbsp;</span> <span class="label-icon" >Search</span></button>
+    <div class="col-sm-12" >
+			<form class="form-group row">
+				<div class="input-group input-group-lg mb-2">
+					<input type="text" class="form-control" placeholder="Find a recipe" aria-label="Search" aria-describedby="basic-addon2" v-model="searchString" v-on:keyUp="searchRecipes()" v-on:keyUp.delete="searchRecipes()">
+					<div class="input-group-append">
+						<button class="btn btn-outline-secondary" type="button" v-on:click="searchRecipes()" >Search</button>
+					</div>
+				</div>
+			</form>
+    </div>
+
+  </div>
+
+  <div class="row">
+
+    <div class="col-sm-3 h-100">
+      <div class="list-group">
+<button v-for="(tag, index) in tags" type="button" v-bind:class="{'active': isActiveFilter(tag.name)}" class="list-group-item list-group-item-action" v-on:click="toggleTag(index)">${tag.name}</button>
+      </div>
+    </div>
+
+    <div class="col-sm-9 h-100">
+      <div class="row">
+        <div class="col-sm-6" v-for="recipe in filteredRecipes">
+          <h2>${recipe.name}</h2>
+          <p>${recipe.description}<p/>
+          <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
         </div>
       </div>
     </div>
+
   </div>
-
-      <div class="row">
-				<div class="col-sm-3 h-100">
-					<div class="list-group">
-    <button v-for="(tag, index) in tags" type="button" v-bind:class="{'active': isActiveFilter(tag.name)}" class="list-group-item list-group-item-action" v-on:click="toggleTag(index)">${tag.name}</button>
-					</div>
-				</div>
-
-
-
-				<div class="col-sm-9 h-100">
-          <div class="row">
-            <div class="col-sm-6" v-for="recipe in displayRecipes()">
-              <h2>${recipe.name}</h2>
-              <p>${recipe.description}<p/>
-              <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
-            </div>
-          </div>
-        </div>
-
-
-      </div>
-
-      <hr>
 
 </div> <!-- /container -->
 
