--- a/views/default/index.html
+++ b/views/default/index.html
@@ -1,96 +1,64 @@
 {{extend 'layout.html'}} {{block head}}
-<script src="{{=URL('static', 'js/vue.js')}}"></script>
+<script src="{{=URL('static', 'js/default_index.js')}}"></script>
+
 <script>
-var my_url = "{{=URL('api', 'my_method')}}";
+
+var API = {
+    getRecipes: "{{=URL('api', 'get_recipes')}}",
+    getRecipe: "{{=URL('api', 'get_recipe')}}",
+};
+
 </script>
 {{end}}
 
+<main role="main" id="vue-div">
 
-<body>
+<!-- Main jumbotron for a primary marketing message or call to action -->
+<div class="jumbotron">
+  <div class="container">
+    <h1 class="display-3">The Food Dude</h1>
+    <p>This is a template for a simple marketing or informational website. It includes a large callout called a jumbotron and three supporting pieces of content. Use it as a starting point to create something more unique.</p>
+    <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more &raquo;</a></p>
+  </div>
+</div>
 
-
-    <!-- Page Content -->
-    <div class="container">
-        <h1 class="my-4 text-center text-lg-left">FoodDudes Finest Recipes</h1>
-        <div class="row text-center text-lg-left">
-          <div class="container">
+<div class="container">
 
   <div class="row searchFilter" >
-     <div class="col-sm-12" >
-      <div class="input-group" >
-       <input id="table_filter" type="text" class="form-control" aria-label="Text input with segmented button dropdown" >
-       <div class="input-group-btn" >
 
-        <button id="searchBtn" type="button" class="btn btn-secondary btn-search" ><span class="glyphicon glyphicon-search" >&nbsp;</span> <span class="label-icon" >Search</span></button>
-       </div>
-      </div>
-     </div>
-  </div>
-</div>
-          <div class="container">
-
-  <div class="row">
-    <div class="col-sm-12">
-      <p>Filter by :
-        <label class="container">
-          <button type="button" class="btn btn-default btn-xs btn-tag">All</button>
-          <input type="checkbox" checked="checked">
-          <span class="checkmark"></span>
-        </label>
-        <label class="container">
-          <button type="button" class="btn btn-default btn-xs btn-tag">Vegetarian</button>
-          <input type="checkbox" checked="checked">
-          <span class="checkmark"></span>
-        </label>
-        <label class="container">
-          <button type="button" class="btn btn-default btn-xs btn-tag">Vegan</button>
-          <input type="checkbox" checked="checked">
-          <span class="checkmark"></span>
-        </label>
-
-        <label class="container">
-          <button type="button" class="btn btn-default btn-xs btn-tag">Keto</button>
-          <input type="checkbox" checked="checked">
-          <span class="checkmark"></span>
-        </label>
-
-      </p>
-    </div>
-    </div>
-  <div class="row">
-    <div class="col-sm-4" id="project1">
-      <div class="panel panel-default">
-        <div class="panel-heading title">
-          <h3 class="panel-title">Pancakes</h3>
-        </div>
-        <div class="panel-body">
-          Flour, milk..
-        </div>
-        <div class="panel-footer tag">
-          <span class="label label-primary hidden">tags go here</span>
-
-        </div>
-      </div>
-
+    <div class="col-sm-12" >
+			<form class="form-group row">
+				<div class="input-group input-group-lg mb-2">
+					<input type="text" class="form-control" placeholder="Find a recipe" aria-label="Search" aria-describedby="basic-addon2" v-model="searchString" v-on:keyUp="searchRecipes()" v-on:keyUp.delete="searchRecipes()">
+					<div class="input-group-append">
+						<button class="btn btn-outline-secondary" type="button" v-on:click="searchRecipes()" >Search</button>
+					</div>
+				</div>
+			</form>
     </div>
 
   </div>
-</div>
 
-            {{for recipe in recipes:}}
-                <div class="col-lg-3 col-md-4 col-xs-6 ">
+  <div class="row">
 
-                        <h3><a href="{{=URL('default', 'recipe', args=[recipe.id])}}">{{=recipe.name}}</a></h3>
-
-                    <p>{{=recipe.description}}</p>
-                    <img class="img-fluid img-thumbnail" src="{{=URL('default', 'download', args=recipe.image)}}" alt="">
-                </div>
-            {{pass}}
-
-        </div>
+    <div class="col-sm-3 h-100">
+      <div class="list-group">
+<button v-for="(tag, index) in tags" type="button" v-bind:class="{'active': isActiveFilter(tag.name)}" class="list-group-item list-group-item-action" v-on:click="toggleTag(index)">${tag.name}</button>
+      </div>
     </div>
-    <script src="{{=URL('static', 'js/default_index.js')}}"></script>
-    <!-- Bootstrap core JavaScript -->
-    <script src="{{=URL('static', 'js/jquery.min.js')}}" ></script>
-    <script src="{{=URL('static', 'js/bootstrap.bundle.js')}}"></script>
-</body>
+
+    <div class="col-sm-9 h-100">
+      <div class="row">
+        <div class="col-sm-6" v-for="recipe in filteredRecipes">
+          <h2>${recipe.name}</h2>
+          <p>${recipe.description}<p/>
+          <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
+        </div>
+      </div>
+    </div>
+
+  </div>
+
+</div> <!-- /container -->
+
+</main>
