--- a/views/default/index.html
+++ b/views/default/index.html
@@ -42,20 +42,56 @@ var API = {
   <div class="row">
 
     <div class="col-sm-3 h-100">
-      <div class="list-group">
-<button v-for="(tag, index) in tags" type="button" v-bind:class="{'active': isActiveFilter(tag.name)}" class="list-group-item list-group-item-action" v-on:click="toggleTag(index)">${tag.name}</button>
+
+			<div class="card mb-4">
+				<div class="card-header">
+					Tags:
+				</div>
+				<div class="list-group list-group-flush">
+        <button v-for="(tag, index) in tags" type="button" v-bind:class="{'active': isActiveFilter(tag.name)}" class="list-group-item list-group-item-action" v-on:click="toggleTagByName(tag.name)">${tag.name}</button>
+				</div>
+			</div> 
+
+      <!--
+      <div class="list-group mt-4">
+        <span class="list-group-item">Ingredients:</span>
+        <button v-for="(tag, index) in tags" type="button" v-bind:class="{'active': isActiveFilter(tag.name)}" class="list-group-item list-group-item-action" v-on:click="toggleTag(index)">${tag.name}</button>
       </div>
+      -->
+
     </div>
 
     <div class="col-sm-9 h-100">
       <div class="row">
+
         <div class="col-sm-6" v-for="recipe in filteredRecipes">
-          <h2>${recipe.name}</h2>
-          <p>${recipe.description}<p/>
-          <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
+          <div class="card mb-4">
+            <div class="card-body">
+              <h3 class="card-title">${recipe.name}</h2>
+              <p class="card-text">${recipe.description}<p/>
+              <a class="card-link" href="#">View recipe</a>
+            </div>
+            <div class="card-footer">
+              <small class="text-muted">Tags:</small>
+              <button 
+                v-for="tagName in recipe.tags" 
+                type="button" 
+                class="btn btn-light btn-sm mr-2"
+                v-bind:class="{
+                  'active': isActiveFilter(tagName)
+                }"
+                v-on:click="toggleTagByName(tagName)"
+              >
+                  ${tagName}
+              </button>
+            </div>
+          </div>
         </div>
+
       </div>
+
     </div>
+    <!--- end col-sm-9 (recipes column -->
 
   </div>
 
