--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -2,3 +2,28 @@
 body {
   padding-top: 3.5rem;
 }
+
+
+@media (min-width: 576px) {
+    #recipe-card-columns {
+        column-count: 1;
+    }
+}
+
+@media (min-width: 768px) {
+    #recipe-card-columns {
+        column-count: 2;
+    }
+}
+
+@media (min-width: 992px) {
+    #recipe-card-columns {
+        column-count: 2;
+    }
+}
+
+@media (min-width: 1200px) {
+    #recipe-card-columns {
+        column-count: 2;
+    }
+}
