--- a/views/layout.html
+++ b/views/layout.html
@@ -35,7 +35,7 @@
 <body>
 
 <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-      <a class="navbar-brand" href="http://127.0.0.1:8000/finalproject/default/aboutus">Navbar</a>
+      <a class="navbar-brand" href="{{=URL('default', 'index')}}">Food Dude</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -43,22 +43,13 @@
       <div class="collapse navbar-collapse" id="navbarsExampleDefault">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item active">
-            <a class="nav-link" href="{{=URL('default', 'index')}}">Home <span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="{{=URL('default', 'index')}}">Recipes <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="recipe.html">Link</a>
+            <a class="nav-link" href="{{=URL('default', 'aboutus')}}">About us</a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link disabled" href="#">Disabled</a>
-          </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="http://127.0.0.1:8000/finalproject/default/aboutus" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Dropdown</a>
-            <div class="dropdown-menu" aria-labelledby="dropdown01">
-              <a class="dropdown-item" href="#">Action</a>
-              <a class="dropdown-item" href="#">Another action</a>
-              <a class="dropdown-item" href="#">Something else here</a>
-            </div>
-          </li>
+
+        
         </ul>
         <ul class=navbar-nav>
           <li class="nav-item dropdown">
