--- a/views/default/recipe.html
+++ b/views/default/recipe.html
@@ -14,5 +14,7 @@ var RECIPE_ID = "{{=recipe_id}}";
 
 <main role="main" id="vue-div">
 
-
+<div class="jumbotron">
+<h1 class="title">Recipes</h1>
+</div>
 </main>
