--- a/views/layout.html
+++ b/views/layout.html
@@ -35,7 +35,7 @@
 <body>
 
 <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-      <a class="navbar-brand" href="{{=URL('default', 'index')}}">Food Dude</a>
+      <a class="navbar-brand" href="{{=URL('default', 'index')}}">Food Dude's Foods</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
