--- a/views/layout.html
+++ b/views/layout.html
@@ -48,8 +48,12 @@
           <li class="nav-item">
             <a class="nav-link" href="{{=URL('default', 'aboutus')}}">About us</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="{{=URL('default', 'favoriterecipes')}}">Favorite Recipes</a>
+          </li>
 
-        
+
+
         </ul>
         <ul class=navbar-nav>
           <li class="nav-item dropdown">
