--- a/views/default/user.html
+++ b/views/default/user.html
@@ -1,12 +1,17 @@
 {{extend 'layout.html'}}
 
-<h2>
-{{=T('Sign Up') if request.args(0) == 'register' else T('Log In') if request.args(0) == 'login' else T(request.args(0).replace('_',' ').title())}}
+<h2 class="text-center align-middle font-weight-light my-sm-4">
+{{=T('Sign Up') 
+    if request.args(0) == 'register' 
+    else T('Log In') 
+    if request.args(0) == 'login' 
+    else T(request.args(0).replace('_',' ').title())
+}}
 </h2>
 
 <div class="container">
-    <div class="row">
-        <div id="web2py_user_form" class="col-lg-6">
+    <div class="col-lg-6 offset-lg-4">
+        <div class="align-middle">
         {{
         if request.args(0)=='login':
             if not 'register' in auth.settings.actions_disabled:
@@ -18,6 +23,30 @@
         pass
         =form
         }}
+        </div>
+    </div>
+</div>
+
+<div class="container">
+    <div class="col-lg-6 offset-lg-4">
+        <div class="align-middle">
+        {{
+        if request.args(0)=='login':
+            if not 'register' in auth.settings.actions_disabled:}}
+            <button
+                v-click:href="{{=URL(args='register', vars={'_next': request.vars._next})}}"
+                > Sign Up
+            </button>
+            {{pass}}
+            {{if not 'request_reset_password' in auth.settings.actions_disabled:}}
+                <button
+                v-click:href="{{=URL(args='request_reset_password')}}"
+                > Lost Password
+            </button>
+            {{pass}}
+        {{pass}}
+
+        
         </div>
     </div>
 </div>
