--- a/views/layout.html
+++ b/views/layout.html
@@ -52,12 +52,10 @@
             <a class="nav-link" href="{{=URL('default', 'favoriterecipes')}}">Favorite Recipes</a>
           </li>
 
-
-
         </ul>
         <ul class=navbar-nav>
           <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="http://example.com" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">User</a>
+            <a class="nav-link dropdown-toggle" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">User</a>
             <div class="dropdown-menu" aria-labelledby="dropdown01">
               <a class="dropdown-item" href="{{=URL('default', 'user', args=['login'])}}">Log in</a>
               <a class="dropdown-item" href="{{=URL('default', 'user', args=['register'])}}">Sign up</a>
@@ -81,13 +79,6 @@
 
 
 </body>
-
-
-
-
-
-
-
 
 <script
   src="https://code.jquery.com/jquery-3.3.1.min.js"
