--- a/views/default/user.html
+++ b/views/default/user.html
@@ -1,43 +1,30 @@
 {{extend 'layout.html'}}
 
+<h2 class="text-center align-middle font-weight-light my-sm-4">
+{{=T('Sign Up') 
+    if request.args(0) == 'register' 
+    else T('Log In') 
+    if request.args(0) == 'login' 
+    else T(request.args(0).replace('_',' ').title())
+}}
+</h2>
 
 
 <div class="container">
     <div class="col-lg-6 offset-lg-4">
         <div class="align-middle">
         {{
-        if request.args(0)=='login':
-            if not 'register' in auth.settings.actions_disabled:
-                form.add_button(T('Sign Up'),URL(args='register', vars={'_next': request.vars._next} if request.vars._next else None),_class='btn btn-default')
-            pass
-            if not 'request_reset_password' in auth.settings.actions_disabled:
-                form.add_button(T('Lost Password'),URL(args='request_reset_password'),_class='btn btn-default')
-            pass
-        pass
-        =form
-        }}
-        </div>
-    </div>
-</div>
-
-<div class="container">
-    <div class="col-lg-6 offset-lg-4">
-        <div class="align-middle">
-        {{
-        if request.args(0)=='login':
-            if not 'register' in auth.settings.actions_disabled:}}
+        =form}}
             <a
                 href="{{=URL(args='register', vars={'_next': request.vars._next})}}"
                 > Sign Up
             </a>
-            {{pass}}
-            {{if not 'request_reset_password' in auth.settings.actions_disabled:}}
+
                 <a
                 href="{{=URL(args='request_reset_password')}}"
                 > Lost Password
             </a>
-            {{pass}}
-        {{pass}}
+
 
         
         </div>
